Editor improvements and refactor