@@ -2,39 +2,51 @@ package com.crschnick.pdx_unlimiter.app.util;
 
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
 import com.fasterxml.jackson.annotation.PropertyAccessor;
+import com.fasterxml.jackson.core.JsonEncoding;
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.core.util.DefaultPrettyPrinter;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.IOUtils;
+import org.apache.commons.io.file.PathUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 public class JsonHelper {
 
-
-    public static <T> T readObject(Class<T> clazz, InputStream in) throws IOException {
+    public static <T> T readObject(Class<T> clazz, Path in) throws IOException {
         ObjectMapper mapper = new ObjectMapper();
         mapper.setVisibility(PropertyAccessor.ALL, JsonAutoDetect.Visibility.NONE);
         mapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
 
-        return mapper.readValue(in.readAllBytes(), clazz);
+        return mapper.readValue(Files.readAllBytes(in), clazz);
     }
 
-    public static void writeObject(Object obj, OutputStream out) throws IOException {
+    public static void writeObject(Object obj, Path out) throws IOException {
         ObjectMapper mapper = new ObjectMapper();
         mapper.setVisibility(PropertyAccessor.ALL, JsonAutoDetect.Visibility.NONE);
         mapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
         mapper.enable(SerializationFeature.INDENT_OUTPUT);
 
         JsonFactory f = new JsonFactory();
-        JsonGenerator g = f.createGenerator(out)
+        JsonGenerator g = f.createGenerator(out.toFile(), JsonEncoding.UTF8)
                 .setPrettyPrinter(new DefaultPrettyPrinter());
         mapper.writeValue(g, obj);
-        out.close();
+    }
+
+    public static JsonNode read(Path in) throws IOException {
+        ObjectMapper mapper = new ObjectMapper();
+        mapper.setVisibility(PropertyAccessor.ALL, JsonAutoDetect.Visibility.NONE);
+        mapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
+
+        return mapper.readTree(in.toFile());
     }
 
     public static void write(JsonNode node, OutputStream out) throws IOException {
